[tool.poetry]
name = "616-bot"
version = "0.0.1"
description = "Bot for booking date for audio studio"
authors = ["kill-your-soul <Platonovdi@gmail.com>"]
readme = "README.md"
packages = [{include = "616_bot"}]

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^3.2.0"
loguru = "^0.7.2"
# sqlalchemy = "^2.0.24"
pymongo = "^4.6.1"
pandas = "^2.1.4"
redis = "^5.0.1"
aioredis = "^2.0.1"


[tool.poetry.group.dev.dependencies]
black = "^23.12.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
